# AudioAugmenter

./: .gitignore  README.md  app.py  augmentations.py  data_manager.py  pyproject.toml  ui.py
src/audioaugmenter/: app.py  augmentations.py  ui.py
