[project]
name = "audioaugmenter"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PyQt6>=6.7.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.1",
    "llvmlite>=0.46.0",
    "numba>=0.63.1",
    "audiomentations>=0.43.1",
]

[project.urls]
Source = "https://github.com/werzum/AudioAugmenter"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/audioaugmenter"]

[project.scripts]
audioaugmenter = "audioaugmenter.__main__:main"
